Fixed text-wrapping on list titles

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
   display: flex;
   flex-direction: row;
   overflow: auto;
-  white-space: nowrap;
   padding: 10px;
   margin-left: 10px;
 
